snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/error-0.1.1-20210823.154613-2.module.sha1
763236e211a9a52549fe62ff10f9bf584f007016